# aiida-reoptimize

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
aiida_reoptimize/base/: Evaluation.py  Extractors.py  Extratractors.py  OptimizerBuilder.py  __init__.py  utils.py
aiida_reoptimize/optimizers/: OptimizerBase.py  SGD.py
aiida_reoptimize/optimizers/PyMOO/: Builder.py  PyMOO.py  __init__.py
aiida_reoptimize/optimizers/convex/: GD.py  QN.py  __init__.py  base.py
aiida_reoptimize/structure/: MPDS_structure.py  dynamic_structure.py  fleur_utils.py  magmoms_utils.py
aiida_reoptimize/workflows/Evaluation/: crystal23_evaluation.py  fleur_evaluators.py
aiida_reoptimize/workflows/Optimization/: Crystal.py  Crystal23.py  FleurRelax.py  FleurSCF.py
examples/Crystal/: example_Crystal.py
examples/Crystal23/: example_Crystal23.py
examples/Dummy/: Dummy_user_problem.py  dummy_Adam.py  dummy_BFGS.py  dummy_CGD.py  dummy_PyMOO_PSO.py  dummy_RMSProp.py
examples/Evaluators/: Au_fleur.py
examples/MPDS_QA/: adam_test.py
examples/OptimizerBuilder/: example_MPDS.py  example_Problem.py  example_Structure.py  example_usage.py
examples/fleur_SrTiO3_140/: DIRECT-optimiation.py  PyMOO_PSO-optimization.py  aiida-optimization.py  optimization_BFGS.py  optimization_PyMOO.py
examples/fleur_relax/: adam.py
examples/workflows/: CDG_crystal_test.py  CDG_fleur_test.py  adam_crystal23_test.py  adam_crystal_test.py  adam_fleur_test.py  adam_test.py
src/base/: Evaluation.py  OptimizerBase.py  OptimizerBuilder.py
src/optimizers/: BFGS.py  DIRECT.py  PSO.py  PyMOO.py  SGD.py
src/optimizers/PyMOO/: Builder.py  PyMOO.py
src/problems/: SrTiO3_140_fleur.py  problems.py
src/structure/: dynamic_structure.py
